# slime2-desktop

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  tsr.config.json  vite.config.ts
.github/workflows/: main.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  prettier.config.js  sidebars.ts  tsconfig.json
docs/docs/dev/: events.mdx  intro.mdx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
pkgbuild/: INSTALLATION_INSTRUCTIONS.txt  PKGBUILD
resources/widgets/slime2-chat-box/: index.html
resources/widgets/slime2-command-bot/: bot.js
resources/widgets/slime2_bot_commands/: bot.js
resources/widgets/slime2_bot_template/: bot.js
resources/widgets/slime2_chat_box/: index.html  script.js  styles.css
resources/widgets/slime2_command_bot/: bot.js
resources/widgets/slime2_overlay_alert_box/: animate.css  index.html  script.js  styles.css
resources/widgets/slime2_overlay_chat_box/: index.html  script.js  styles.css
resources/widgets/slime2_overlay_template/: index.html  script.js  styles.css
resources/widgets/slime2_template_bot/: bot.js
resources/widgets/slime2_template_overlay/: script.js
resources/widgets/test/: index.html  script.js  styles.css
resources/widgets/twitch-chat/: index.html  script.js  styles.css
resources/widgets/twitch-command-bot/: bot.js
src/: App.tsx  main.tsx  routeTree.gen.ts  styles.css
src-overlay/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts
src-overlay/src/: index.css  main.tsx
src-overlay/src/@types/: global.d.ts
src-overlay/src/components/: Widget.tsx
src-overlay/src/helpers/: serverUrl.ts  widgetApi.ts  zodError.ts
src-overlay/src/hooks/: useMetaLoader.ts  useSlime2Websocket.ts
src-overlay/src/routes/: $.tsx
src-tauri/: .gitignore  2  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: clipboard.json  default.json  dialog.json  event.json  file.json  files.json  log.json  opener.json  path.json  process.json  updater.json  version.json  watcher.json  websocket.json  window-state.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file.rs  main.rs  secret.rs  server.rs  watcher.rs
src-tauri/src/server/: websocket.rs
src-tauri/src/server/websocket/: ws_commands.rs
src-widget/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  vite.config.ts
src-widget/src/: main.tsx  routeTree.gen.ts
src-widget/src/@types/: global.d.ts
src-widget/src/components/: Widget.tsx
src-widget/src/helpers/: serverUrl.ts  widgetApi.ts  zodError.ts
src-widget/src/hooks/: useMetaLoader.ts  useSlime2Websocket.ts
src-widget/src/routes/: $.tsx  $widgetId.tsx  __root.tsx  index.tsx
src-widget/src/services/: data.ts
src/@types/: global.d.ts  helper.d.ts  props.d.ts  twitch.d.ts  utility.d.ts
src/components/: AccountPreview.tsx  ColorInputPreview.tsx  DevPeek.tsx  ExternalLink.tsx  FileDropper.tsx  FontLoader.tsx  LinkifyText.tsx  MediaIcon.tsx  MediaInputPreview.tsx  MediaPreview.tsx  MoveModeBanner.tsx  SlimeTile.tsx  TabPanelWithPrevious.tsx  TileSettingsButton.tsx
src/contexts/: common.ts
src/helpers/: appVersion.ts  array.ts  colorConversion.ts  commands.ts  defaultWidgets.ts  i18n.ts  media.ts  mock.ts  openFile.ts  query.ts  queryClient.ts  queryHooks.ts  random.ts  saveFile.ts  scroll.ts  serverBaseUrl.ts  serverUrl.ts  string.ts  tileColors.ts  twitchAuth.ts  websocket.ts  widgetMessage.ts  zodError.ts
src/helpers/json/: grid.ts  (+12 more)
src/hooks/: useAppVersionQuery.ts  useAriaId.ts  useAutoScrollDisclosureOpen.ts  useEditTile.tsx  useFileDrop.ts  useScrollTopObserver.ts  useSettingsQuery.ts  useSystemFontsQuery.ts  useTwitchBot.ts  useTwitchWebsocket.ts  useUnsuspender.ts  useWidgetCoreChange.ts  useWidgetRegistration.ts  useWidgetRequest.ts  useWidgetSettingsQuery.ts
src/pages/: MainTabs.tsx
src/routes/: __root.tsx  index.lazy.tsx  settings.lazy.tsx
(+395 files in other folders)
