# Cargo.toml manifest documentation https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "slime2"
version = "0.0.0"
description = "Local Stream Widget Manager"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# necessary for tauri
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

# added for slime2
chrono = "0.4"
font-kit = "0.14"
futures = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
nanoid = "0.4"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.3.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
zip = "2"

[features]
#! This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
