# Cargo.toml manifest documentation https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "slime2"
version = "0.0.0"
description = "Local Stream Widget Manager"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# necessary for tauri
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

# added for slime2
chrono = "0.4"
font-kit = { version = "0.14" }
futures = "0.3"
junk_file = "0.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
nanoid = "0.5"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
warp = { version = "0.4", features = ["server", "websocket"] }
zip = "8"

[features]
devtools = ["tauri/devtools"]

#! This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

